# PinPoint

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  Main.qml  README.md  main.cpp
Audio/: audio_input.cpp  audio_input.h  audio_input_base.cpp  audio_processor_base.h  audio_stream_saver.h
Gui/: Main.qml  macos_permissions.h  macos_permissions.mm  transcription_controller.cpp
IMU/: wt9011dcl.cpp  wt9011dcl.h  wt9011dcl_base.cpp  wt9011dcl_base.h  wt9011dcl_ble.cpp
STT/: whisper_processor.cpp  whisper_processor.h
cmake/: PatchEspeakNg.cmake  PatchLibsamplerate.cmake
docs/: stt_audit.md
src/Audio/: AudioConverter.cpp  AudioConverter.h  audio_input_base.h  audio_output.cpp  audio_output.h  audio_output_base.cpp  audio_output_base.h  audio_processor_base.cpp  audio_stream_saver.cpp
src/Gui/: AudioPage.qml  CapturePage.qml  Main.qml  VideoPage.qml  macos_permissions.h  macos_permissions.mm  main.cpp  transcription_controller.cpp  transcription_controller.h  tts_controller.cpp  tts_controller.h  video_controller.cpp  video_controller.h
src/IMU/: wt9011dcl_ble.h
src/STT/: STTBackend.h  STTBackendApple.h  STTBackendApple.mm  STTBackendAssemblyAI.cpp  STTBackendAssemblyAI.h  STTBackendAzure.cpp  STTBackendAzure.h  STTBackendFactory.cpp  STTBackendFactory.h  STTBackendWhisperCpp.cpp  STTBackendWhisperCpp.h  STTWorker.cpp  STTWorker.h  WhisperBackend.h  WhisperBackendFactory.cpp  WhisperBackendFactory.h  WhisperBackendWhisperCpp.cpp  WhisperBackendWhisperCpp.h  WhisperWorker.cpp  WhisperWorker.h  stt_processor.cpp  stt_processor.h  whisper_processor.cpp  whisper_processor.h
src/Secrets/: SecretsManager.cpp  SecretsManager.h
src/TTS/: AzureTTSEngine.cpp  AzureTTSEngine.h  KokoroTTSEngine.cpp  KokoroTTSEngine.h  ModelDownloader.cpp  ModelDownloader.h  PhonemeTokenizer.cpp  PhonemeTokenizer.h  TTSEngine.cpp  TTSEngine.h  TTSEngineFactory.cpp  TTSEngineFactory.h  TtsWorker.cpp  TtsWorker.h
src/Video/: VideoInputApple.h  VideoInputApple.mm  video_frame_processor.cpp  video_frame_processor.h  video_frame_processor_base.cpp  video_frame_processor_base.h  video_input.cpp  video_input.h  video_input_base.cpp  video_input_base.h
